// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={287}
      createdAt={0}
      description="Gum"
      id={0}
      key="0"
      note=""
    />
    <ExpenseListItem
      amount={1087}
      createdAt={-345600000}
      description="Rendt"
      id={1}
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={5087}
      createdAt={345600000}
      description="Credit Cart"
      id={2}
      key="2"
      note=""
    />
  </div>
</div>
`;

exports[`should render ExpenseList with no expneses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No Expenses
      </span>
    </div>
  </div>
</div>
`;
